trying to use callbacks

--- a/segmentation/train_config.ini
+++ b/segmentation/train_config.ini
@@ -14,4 +14,4 @@ tfrecords = ~/Datasets/BraTS/BraTS_TFRecords/BraTS18
 save-file = model.tf
 
 [TensorFlow]
-tensorboard-dir = tensorboard
+tensorboard-dir = ./tensorboard
