--- a/segmentation/train_config.ini
+++ b/segmentation/train_config.ini
@@ -5,7 +5,8 @@ year = 2018
 [Hyperparameters]
 learning-rate = 0.0001
 epochs = 1500
-mini-batch = 32
+mini-batch = 1
+seed = 420
 
 [Input]
 tfrecords = ~/Datasets/BraTS/BraTS_TFRecords/BraTS18
