--- a/segmentation/train_config.ini
+++ b/segmentation/train_config.ini
@@ -16,5 +16,5 @@ mini-batch = 1
 seed = 420
 
 [dataset]
-prefetch-buffer-size 16
-shuffle-buffer-size 16
+prefetch-buffer-size = 16
+shuffle-buffer-size = 16
