Learning rate config fix

--- a/segmentation/train_config.ini
+++ b/segmentation/train_config.ini
@@ -11,7 +11,7 @@ save-file = model.tf
 
 [Hyperparameters]
 learning-rate = 0.0001
-learning-decay-rate =
+learning-decay-rate = 0.9
 epochs = 100
 mini-batch = 1
 seed = 420
