--- a/segmentation/train_config.ini
+++ b/segmentation/train_config.ini
@@ -10,6 +10,7 @@ tensorboard-dir = ./tensorboard
 save-file = model.tf
 
 [Hyperparameters]
+adam = False
 learning-rate = 0.0001
 learning-decay-rate = 0.9
 epochs = 100
