--- a/segmentation/train_config.ini
+++ b/segmentation/train_config.ini
@@ -5,6 +5,7 @@ tfrecords = ~/Datasets/BraTS/TFRecords/2018
 
 [TensorFlow]
 tensorboard-dir = ./tensorboard
+log-frequency = 20
 
 [Output]
 save-file = model.tf
@@ -14,6 +15,7 @@ adam = False
 learning-rate = 0.0001
 learning-decay-rate = 0.9
 epochs = 100
+test-batch-size = 20
 mini-batch = 1
 seed = 420
 
