Added a bunch of stuff

--- a/segmentation/train_config.ini
+++ b/segmentation/train_config.ini
@@ -1,5 +1,5 @@
 [BraTS]
-root = ~/Datasets/BraTS
+root = ~/Documents/Academic/Courses/CS_230/Dataset/BraTS_TFRecords
 year = 2018
 
 [Hyperparameters]
@@ -9,7 +9,7 @@ mini-batch = 1
 seed = 420
 
 [Input]
-tfrecords = ~/Datasets/BraTS/BraTS_TFRecords/BraTS18
+tfrecords = ~/Documents/Academic/Courses/CS_230/Dataset/BraTS_TFRecords/BraTS18
 
 [Output]
 save-file = model.tf
