Tried to fix multi-class labels

--- a/segmentation/config_gcp.ini
+++ b/segmentation/config_gcp.ini
@@ -4,8 +4,8 @@ year = 2018
 tfrecords = gs://brats-20x/tfrecords
 
 [TensorFlow]
-tensorboard-dir = gs://brats-20x/
+tensorboard-dir = gs://brats-20x/tensorboard
 log-frequency = 100
 
 [Output]
-save-file = gs://brats-20x/model/model.
+save-file = gs://brats-20x/model/model.tf
