Fixed saving model

--- a/segmentation/config_local.ini
+++ b/segmentation/config_local.ini
@@ -8,4 +8,4 @@ tensorboard-dir = ./tensorboard
 log-frequency = 100
 
 [Output]
-save-file = model.tf
+save-file = /afs/cs.stanford.edu/u/jdeaton/dfs/unet/model
