Tried adding instead of concat

--- a/segmentation/config_local.ini
+++ b/segmentation/config_local.ini
@@ -1,11 +1,12 @@
 [BraTS]
+
 root = ~/Datasets/BraTS
 year = 2018
-tfrecords = ~/Datasets/BraTS/tfrecords
+tfrecords = ~/tfrecords
 
 [TensorFlow]
 tensorboard-dir = ./tensorboard
 log-frequency = 100
 
 [Output]
-save-file = /afs/cs.stanford.edu/u/jdeaton/dfs/unet/model
+save-file = ~/model_outputs
