Debugged a lot of issues

--- a/segmentation/config_local.ini
+++ b/segmentation/config_local.ini
@@ -1,8 +1,7 @@
 [BraTS]
-
 root = ~/Datasets/BraTS
 year = 2018
-tfrecords = ~/tfrecords
+tfrecords = ~/Datasets/BraTS/tfrecords
 
 [TensorFlow]
 tensorboard-dir = ./tensorboard
@@ -10,3 +9,5 @@ log-frequency = 100
 
 [Output]
 save-file = ~/model_outputs
+max_to_keep = 5
+keep_checkpoint_every_n_hours = 2
